SUBDIRS = config m4 src

EXTRA_DIST = \
  COPYING \
  autogen.sh 

MAINTAINERCLEANFILES = \
  Makefile.in \
  aclocal.m4 \
  config.guess \
  config.h.in \
  config.status \
  config.sub \
  configure \
  compile \
  depcomp \
  install-sh \
  ltmain.sh \
  missing \
  js-$(PACKAGE_VERSION).tar.gz \
  *~

ACLOCAL_AMFLAGS = -I m4
