MAINTAINERCLEANFILES = Makefile.in

pkgincludedir = $(includedir)/jsmm
pkginclude_HEADERS = \
  allocprivate \
  api \
  arrayobject \
  arrayobjectapi \
  baseclass \
  baseconstructor \
  basefunction \
  callback \
  class \
  classapi \
  classexception \
  classprivate \
  constdoublespec \
  constructor \
  constructorapi \
  constructorexception \
  constructorobject \
  constructorobjectapi \
  context \
  contextapi \
  contextexception \
  engine \
  errorreport \
  exception \
  fileobject \
  fileobjectapi \
  forward \
  function \
  functionapi \
  functionexception \
  functionobject \
  functionobjectapi \
  functionspec \
  namespace \
  numberobjectapi \
  object \
  objectapi \
  objectexception \
  pointer \
  propertyspec \
  prototype \
  prototypeobject \
  prototypeobjectapi \
  reference \
  runtime \
  runtimeapi \
  script \
  scriptapi \
  scriptexception \
  specarray \
  stackframe \
  stdext \
  string \
  stringapi \
  structs \
  types \
  value \
  xdr


